objects/Echeancier__c.object
<CustomObject>
    <fields>
        <fullName>Date_previsionnelle__c</fullName>
        <label>Exercice (Non utilisé)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exercice__c</fullName>
        <label>Exercice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECH-EX10</fullName>
                </value>
                <value>
                    <fullName>ECH-EX20</fullName>
                </value>
                <value>
                    <fullName>ECH-EX30</fullName>
                </value>
                <value>
                    <fullName>ECH-EX40</fullName>
                </value>
                <value>
                    <fullName>ECH-EX50</fullName>
                </value>
                <value>
                    <fullName>ECH-EX60</fullName>
                </value>
                <value>
                    <fullName>ECH-EX70</fullName>
                </value>
                <value>
                    <fullName>ECH-EX80</fullName>
                </value>
                <value>
                    <fullName>ECH-EX90</fullName>
                </value>
                <value>
                    <fullName>ECH-EX100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montant_Opp__c</fullName>
        <formula>Opportunite__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total de l&apos;opportunité</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_diff_rentiel_avec_ch_ancier__c</fullName>
        <formula>Opportunite__r.Montant_diff_rentiel_avec_ch_ancier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant différentiel avec échéancier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_previsionnel__c</fullName>
        <label>Montant prévisionnel sur l&apos;exercice</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunite__c</fullName>
        <label>Opportunité</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Echéancier</relationshipLabel>
        <relationshipName>Ech_anciers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>TEXT(YEAR(Date_previsionnelle__c))&amp;&quot;_P&quot;&amp;IF ( MONTH(Date_previsionnelle__c) &lt;= 3,&quot;1&quot;,IF ( MONTH(Date_previsionnelle__c) &lt;= 8,&quot;2&quot;,&quot;3&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Période</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <label>Echéancier</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nom de Echéancier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Echéanciers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RV_Echeancier01_ExerciceObligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
ISPICKVAL(  Exercice__c , &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Vous devez saisir un exercice</errorMessage>
    </validationRules>
</CustomObject>